# sqlalchemy-cookiecutter-

./: README.md  check.bat  cookiecutter.json  data-structure.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
{{cookiecutter.project_slug}}/alembic/: env.py  script.py.mako
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: config.py  etl.py  run.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/db/: __init__.py  session.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/models/: __init__.py  base.py  user.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_models.py
